--- a/audio/audio.html
+++ b/audio/audio.html
@@ -4,100 +4,214 @@
 	<title>Audio</title>
 	<script type="text/javascript" src="jquery-1.9.1.js"></script>
 <script type="text/javascript">
+var magnify = 15;
+var canvasHeight = 150;
+
 var context;
-var canvas;
+var canvasSpec;
+var canvasProgress;
+var canvasSelection;
+var canvasSelectionObj;
+var divCanvas;
 var fft;
-var buffer;
+var freqdata;
+var source;
+var audio;
+var playing = false;
+var canvasWidth = 10;
+var selStart = 0;
+var selEnd = 0;
+var selecting = false;
+var nextFrame;
 
 $(function() {
-	canvas = document.getElementById('specCanvas').getContext('2d');
-
-	var audio = new Audio();
-	audio.src = "track.mp3";
 	
+	audio = new Audio();
+	audio.src = "se-econ-chinese-growth-14nov13.mp3";
+	
+	nextFrame = window.mozRequestAnimationFrame || window.webkitRequestAnimationFrame;
 	context = new webkitAudioContext();
+	//context = new AudioContext();
 	fft = context.createAnalyser();
-	fft.fftSize = 1024;
-	buffer = new Uint8Array(fft.frequencyBinCount);
+	fft.fftSize = 512;
+	freqdata = new Uint8Array(512);
 	
-	if ( audio.readyState < 3 ) {
-		audio.addEventListener( 'canplay', function () {
-			var source = context.createMediaElementSource(audio);
-			source.connect(fft);
-			source.connect(gain);
-			fft.connect(context.destination);
-			gain.connect(context.destination);
-			console.log('connected ...');
+	if (audio.readyState < 3 ) {
+		audio.addEventListener('canplay', function () {
+			readyPlay();
 		});
 	} else {
-		var source = context.createMediaElementSource(audio);
-		source.connect(fft);
-		source.connect(gain);
-		fft.connect(context.destination);
-		gain.connect(context.destination);
-		console.log('connected ...');
+		readyPlay();
 	}
-
-	var gain = context.createGainNode();
-	
-	//audio.play();
 	
 	$('#btnPlay').click(function(){
+		console.log('start...');
+		startPlay();
+	});
 	
-		audio.play();
-		console.log('started play...');
-		intervalId = setInterval('drawSpectrum()', 100);
+	$('#btnPlaySelection').click(function(){
+		console.log('Play Selection...');
+		playSelection();
 	});
 	
 	$('#btnPause').click(function(){
-		audio.pause();
+		console.log('pause...');
+		stopPlay();
 	});
+	
 });
 
-function process(event) {
-	var buffer = event.inputBuffer.getChannelData(0);
-	var sum = 0;
-	for (i = 0; i < buffer.length; i ++) {
-		if (buffer[i])
-			sum += buffer[i];
+function readyPlay() {
+	source = context.createMediaElementSource(audio);
+
+	audio.addEventListener('ended', function(){
+		console.log('ended... ');
+		stopPlay();
+	});
+	
+	canvasWidth = audio.duration * magnify;
+	console.log('audio.duration : ' + audio.duration);
+	$('#canvasSpec').attr("width", canvasWidth);
+	$('#canvasSpec').attr("height", canvasHeight);
+	canvasSpec = document.getElementById('canvasSpec').getContext('2d');
+	canvasSpec.fillStyle = 'gray';
+	canvasSpec.fillRect(0, 0, canvasWidth, canvasHeight);
+	
+	
+	$('#canvasProgress').attr("width", canvasWidth);
+	$('#canvasProgress').attr("height", canvasHeight);
+	canvasProgress = document.getElementById('canvasProgress').getContext('2d');
+	canvasProgress.clearRect(0, 0, canvasWidth, canvasHeight);
+	
+	$('#canvasSelection').attr("width", canvasWidth);
+	$('#canvasSelection').attr("height", canvasHeight);
+	canvasSelectionObj = document.getElementById('canvasSelection');
+	canvasSelection = canvasSelectionObj.getContext('2d');
+	canvasSelection.clearRect(0, 0, canvasWidth, canvasHeight);
+	canvasSelection.fillStyle = 'yellow';
+	canvasSelection.globalAlpha = 0.2;
+	divCanvas = document.getElementById('divCanvas');
+	
+	canvasSelectionObj.onmousedown = function(e){
+		selStart = e.clientX - canvasSelectionObj.offsetLeft + divCanvas.scrollLeft - 8;
+		selEnd = 0;
 		
-	}
-	var average = sum / buffer.length
-	var scaled_average = average * 1000;
+		selecting = true;
+	};
 	
-	var left = Math.floor(context.currentTime * 10);
-	canvas.fillRect(left, 200, left + 1, -scaled_average);
-	//console.log(sum);
+	canvasSelectionObj.onmousemove = function(e){
+		if (!selecting)
+			return;
+		selEnd = e.clientX - canvasSelectionObj.offsetLeft + divCanvas.scrollLeft - 8;
+		drawSelection();
+	};
 	
-    $('#rwduration').text(context.currentTime.toFixed(0));
-    $('#rwfreq').text(sum.toFixed(2));
+	canvasSelectionObj.onmouseup = function(e){
+		if (!selecting)
+			return;
+		selEnd = e.clientX - canvasSelectionObj.offsetLeft + divCanvas.scrollLeft - 8;
+		if (selStart > selEnd) {
+			var selTemp = selStart;
+			selStart = selEnd;
+			selEnd = selTemp;
+		}
+		selecting = false;
+		console.log('selStart: ' + selStart + ', selEnd: ' + selEnd);
+	};
+	
+	$('#btnPlay').removeAttr("disabled");
+	console.log('ready... ');
+}
+
+function drawSelection() {
+	canvasSelection.clearRect(0, 0, canvasWidth, canvasHeight);
+	canvasSelection.fillRect(selStart, canvasHeight, selEnd - selStart, -canvasHeight);
+}
+
+function playSelection() {
+	if (selEnd - selStart <= 0)
+		return;
+	
+	var startTime = selStart / magnify;
+	var endTime = selEnd / magnify;
+	
+	audio.currentTime = startTime;
+	startPlay();
+	setTimeout("stopPlay();", (endTime - startTime) * 1000);
+}
+
+function startPlay() {
+	source.connect(fft);
+	fft.connect(context.destination);
+	
+	audio.play();
+	playing = true;
+	$('#btnPause').removeAttr("disabled");
+	$('#btnPlay').attr("disabled", "disabled");
+	$('#btnPlaySelection').attr("disabled", "disabled");
+	nextFrame(drawAnimation);
+	console.log('playing...');
+}
+
+function stopPlay() {
+	source.disconnect();
+	audio.pause();
+	playing = false;
+	$('#btnPlay').removeAttr("disabled");
+	$('#btnPlaySelection').removeAttr("disabled");
+	$('#btnPause').attr("disabled", "disabled");
+	console.log('stopped...');
+}
+
+function drawAnimation() {
+	if(!playing) return;
+	nextFrame(drawAnimation);
+	drawSpectrum();
+	drawProgress();
 }
 
 function drawSpectrum() {
-	fft.smoothingTimeConstant = this.smoothing;
-	fft.getByteFrequencyData(buffer);
+	var currTime = audio.currentTime;
+	fft.getByteFrequencyData(freqdata);
+	
 	var sum = 0;
-	for (i = 0; i < buffer.length; i ++) {
-		sum += buffer[i];
+	for (i = 0; i < freqdata.length; i ++) {
+		sum += freqdata[i];
 	}
-	var average = sum / buffer.length;
-    $('#rwduration').text(context.currentTime.toFixed(0));
-    $('#rwfreq').text(average.toFixed(2));
-    
-    var scaled_average = (average / 256) * 300;
-    
-	var left = Math.floor(context.currentTime * 20);
-	//console.log('left: ' + left);
-	canvas.fillRect(left, 300, 1, -scaled_average);
+	
+	var average = sum / freqdata.length;
+	$('#rwduration').text(currTime.toFixed(1));
+	//$('#rwfreq').text(average.toFixed(2));
+	var scaled_average = (average * 5 / 256) * canvasHeight;
+	
+	var left = Math.floor(currTime * magnify);
+	canvasSpec.fillStyle = 'green';
+	canvasSpec.fillRect(left, canvasHeight, 1, -scaled_average);
+}
+
+
+function drawProgress() {
+	var currTime = audio.currentTime;
+	var left = Math.floor(currTime * 15);
+	canvasProgress.clearRect(0, 0, canvasWidth, canvasHeight);
+	canvasProgress.fillStyle = 'red';
+	canvasProgress.fillRect(left, canvasHeight, 1, -canvasHeight);
 }
 </script>
 </head>
 
 <body align="left">
 <div>
-<button id='btnPlay'>Play</button><button id='btnPause'>Pause</button>
-<span id='rwduration'></span> - <span id='rwfreq'></span>
+<button id="btnPlay" disabled>Play</button>
+<button id="btnPause" disabled>Pause</button>
+<button id="btnPlaySelection" disabled>Play Selection</button>
+<span id="rwduration"></span> - <span id="rwfreq"></span>
 </div>
-<canvas id="specCanvas" width=800 height=300 align="left"></canvas>
+<div id="divCanvas" style="width:800px; height:170px; overflow-y:hidden; overflow-x:scroll;position:relative;">
+<canvas id="canvasSpec" width="10" height="10" align="left" style="position: absolute;"></canvas>
+<canvas id="canvasProgress" width="10" height="10" align="left" style="position: absolute;"></canvas>
+<canvas id="canvasSelection" width="10" height="10" align="left" style="position: absolute;"></canvas>
+</div>
+
 </body>
 </html>
